--- a/g2b/WebContent/index.css
+++ b/g2b/WebContent/index.css
@@ -1,14 +1,12 @@
 @charset "UTF-8";
 
-table, td {
-	border: 1px solid black
+table, th, td {
+	text-align: center;
+	border: 1px solid black;
 }
 
-table {
-	position: relative;
-	width : 50%;
+table.date {
+	width: 50%;
 	height: 100px;
 	margin: auto;
-	text-align: center;
-	width: 50%;
 }
